--- a/BulletinBoard/Pages/Shared/_LoginPartial.cshtml
+++ b/BulletinBoard/Pages/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
-﻿@using Microsoft.AspNetCore.Identity
-@using BulletinBoard.Models;
+﻿@using BulletinBoard.Common.Models.AuthorisationModels;
+@using Microsoft.AspNetCore.Identity
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
