--- a/BulletinBoard/ClientApp/src/app/login/login.component.html
+++ b/BulletinBoard/ClientApp/src/app/login/login.component.html
@@ -1,1 +1,6 @@
-<p>login works!</p>
+<h1>Login Form</h1>
+<div>
+  <input [(ngModel)]="username" />
+  <input [(ngModel)]="password" type="password" />
+  <button (click)="login()">Login</button>
+</div>
