--- a/BulletinBoard/ClientApp/src/app/app.component.html
+++ b/BulletinBoard/ClientApp/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav>
   <ul>
-    <li><a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">Tasks</a></li>
+    <li><a routerLink="/users" routerLinkActive="active" ariaCurrentWhenActive="page">Users</a></li>
     <li><a routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page">Login</a></li>
     <li><a routerLink="/register" routerLinkActive="active" ariaCurrentWhenActive="page">Register</a></li>
   </ul>
