--- a/BulletinBoard/ClientApp/src/app/nav-bar/nav-bar.component.html
+++ b/BulletinBoard/ClientApp/src/app/nav-bar/nav-bar.component.html
@@ -1,12 +1,12 @@
 <div class="topnav" id="tryfTopNav">
   <div class="mainNavPart">
-    <a href=""><img src="/assets/icon24.png" width="24" height="24" /></a>
-    <a href="">Главная</a>
+    <a routerLink=""><img src="/assets/icon24.png" width="24" height="24" /></a>
+    <a routerLink="">Главная</a>
     <a routerLink="/users" *ngIf="isAdmin">Пользователи</a>
   </div>
   <div class="signPart">
-    <a href="/" class="logout" *ngIf="visibility" (click)="logout()">Выход</a>
-    <a routerLink="/" class="userProfile" *ngIf="visibility">{{username}}</a>
+    <a routerLink="/" class="logout" *ngIf="visibility" (click)="logout()">Выход</a>
+    <a routerLink="/" class="userProfile" *ngIf="visibility">{{userName}}</a>
     <a routerLink="/register" *ngIf="!visibility">Регистрация</a>
     <a routerLink="/login" *ngIf="!visibility">Вход</a>
   </div>
