--- a/BulletinBoard/ClientApp/src/app/app.component.html
+++ b/BulletinBoard/ClientApp/src/app/app.component.html
@@ -1,9 +1,11 @@
-<div>
-  <div>
+<div class="grid-container">
+  <div class="header">
     <app-nav-bar></app-nav-bar>
   </div>
-  <br/>
-  <div class="conteiner">
+  <dir class="menu">
+    <app-categories></app-categories>
+  </dir>
+  <div class="main">
     <router-outlet></router-outlet>
   </div>
 </div>
