--- a/BulletinBoard/ClientApp/src/app/users/users.component.html
+++ b/BulletinBoard/ClientApp/src/app/users/users.component.html
@@ -1,3 +1,3 @@
 <div *ngFor="let user of users">
-   <h4>User {{user.userName}}</h4>
+  <a>Пользователь: {{user.userName}} </a><a routerLink="/users" class="linkbutton" (click)="promotion(user.id)">Сделать администратором</a>
 </div>
