--- a/BulletinBoard/ClientApp/src/app/app.component.css
+++ b/BulletinBoard/ClientApp/src/app/app.component.css
@@ -6,12 +6,12 @@
   grid-area: menu;
   grid-column: span 1;
   margin: 0 0 0 0;
-  padding: 0 40px 0 40px;
+  padding: 18.72px 0 0 10px;
 }
 
 .main {
   grid-area: main;
-  margin: 18.72px 0 0 0;
+  margin: 18.72px 10px 0 0;
 }
 
 .grid-container {
