--- a/BulletinBoard/ClientApp/src/app/categories/categories.component.html
+++ b/BulletinBoard/ClientApp/src/app/categories/categories.component.html
@@ -1,4 +1,7 @@
-<h3>Категории</h3>
-<div class="sidenav" *ngFor="let category of categories">
-  <a>{{category.categoryName}}</a>
+<div class="sidenav-conteiner">
+  <h3>Категории</h3>
+  <div class="sidenav" *ngFor="let category of categories">
+    <a>{{category.categoryName}}</a>
+  </div>
 </div>
+
