--- a/BulletinBoard/ClientApp/src/app/app.component.html
+++ b/BulletinBoard/ClientApp/src/app/app.component.html
@@ -1,11 +1,8 @@
 <div class="grid-container">
-  <div class="header">
+  <div class="headbar">
     <app-nav-bar></app-nav-bar>
   </div>
-  <dir class="menu">
-    <app-categories></app-categories>
-  </dir>
-  <div class="main">
+  <div class="mainContent">
     <router-outlet></router-outlet>
   </div>
 </div>
