--- a/BulletinBoard/ClientApp/src/app/categories/categories.component.css
+++ b/BulletinBoard/ClientApp/src/app/categories/categories.component.css
@@ -3,6 +3,8 @@
 }
 
 .sidenav-conteiner {
-  padding: 16px;
+  padding: 15px;
+  max-width: 200px;
   background-color: #f2f2f2;
+  border-radius: 15px;
 }
