--- a/BulletinBoard/ClientApp/src/app/nav-bar/nav-bar.component.css
+++ b/BulletinBoard/ClientApp/src/app/nav-bar/nav-bar.component.css
@@ -1,5 +1,9 @@
 .topnav {
   overflow: hidden;
+  top: 0;
+  position: fixed;
+  width: 99%;
+  margin-bottom:50px;
   background-color: #f2f2f2;
   border-radius: 15px;
 }
