--- a/BulletinBoard/ClientApp/src/app/register/register.component.html
+++ b/BulletinBoard/ClientApp/src/app/register/register.component.html
@@ -4,13 +4,13 @@
       <h2>Регистрация</h2>
 
       <label for="email"><b>Имя пользователя</b></label>
-      <input [(ngModel)]="username" type="text" placeholder="Введите имя пользователя" name="username" id="username" required>
+      <input [(ngModel)]="username" type="text" placeholder="Введите имя пользователя" name="username" id="username" required [ngModelOptions]="{standalone: true}">
 
       <label for="password"><b>Пароль</b></label>
-      <input [(ngModel)]="password" type="password" placeholder="Введите пароль" name="password" id="password" required>
+      <input [(ngModel)]="password" type="password" placeholder="Введите пароль" name="password" id="password" required [ngModelOptions]="{standalone: true}">
 
       <label for="password-repeat"><b>Повторите пароль</b></label>
-      <input [(ngModel)]="confirmPassword" type="password" placeholder="Повторите пароль" name="confirmPassword" id="confirmPassword" required>
+      <input [(ngModel)]="confirmPassword" type="password" placeholder="Повторите пароль" name="confirmPassword" id="confirmPassword" required [ngModelOptions]="{standalone: true}">
 
       <button type="submit" class="registerbtn" (click)="register()">Зарегистрироваться</button>
     </div>
