починил форму создания объявления (кроме 1 детали), сделал главную страницу с объявлениями (пока без правок для красоты, но хорошо), сделал пагинацию и исправил пару ошибок в эндпоинтах

--- a/BulletinBoard/ClientApp/src/app/login/login.component.html
+++ b/BulletinBoard/ClientApp/src/app/login/login.component.html
@@ -9,7 +9,7 @@
     <label for="password"><b>Пароль</b></label>
     <input [(ngModel)]="password" type="password" name="password" id="password" placeholder="Введите пароль" required [ngModelOptions]="{standalone: true}" />
 
-    <button type="submit" class="btn" (click)="login()">Отправить</button>
+    <button type="submit" class="btn" (click)="login()">Вход</button>
 
     <div class="container signup">
       <p>У вас ещё нет аккаунта? <a routerLink="/register">Регистрация</a>.</p>
