--- a/BulletinBoard/ClientApp/src/app/nav-bar/nav-bar.component.html
+++ b/BulletinBoard/ClientApp/src/app/nav-bar/nav-bar.component.html
@@ -9,5 +9,6 @@
     <a routerLink="/" class="userProfile" *ngIf="visibility">{{userName}}</a>
     <a routerLink="/register" *ngIf="!visibility">Регистрация</a>
     <a routerLink="/login" *ngIf="!visibility">Вход</a>
+    <a routerLink="/create-product" *ngIf="visibility">Разместить объявление</a>
   </div>
 </div>
