добавил переход на страницу продукта, начальное отображение, рассортировал компоненты клиентского приложения чтобы было удобно

--- a/BulletinBoard/ClientApp/src/app/products/products.component.css
+++ b/BulletinBoard/ClientApp/src/app/products/products.component.css
@@ -1,3 +1,14 @@
+.menu {
+    position: fixed;
+}
+
+.products-conteiner {
+    width: 99%;
+    margin-left: 200px;
+    padding-left: 5px;
+    position: fixed;
+}
+
 .column {
   float: left;
   width: 20%;
