--- a/BulletinBoard/ClientApp/src/app/users/user/user.component.html
+++ b/BulletinBoard/ClientApp/src/app/users/user/user.component.html
@@ -1,1 +1,40 @@
-<p>user works!</p>
+<div class="card" *ngIf="userDetails">
+  <h1>Мой кабинет</h1>
+  <ul class="list-group">
+    <li class="list-group-item">
+      <strong>Имя пользователя: </strong>{{userDetails.userName}}
+    </li>
+    <li class="list-group-item">
+      <strong>Город: </strong>{{userDetails.city}}
+    </li>
+    <li class="list-group-item">
+      <strong>Email: </strong>{{userDetails.email}}
+    </li>
+    <li class="list-group-item">
+      <strong>Пол: </strong>{{userDetails.gender}}
+    </li>
+    <li class="list-group-item">
+      <strong>Номер телефона: </strong>{{userDetails.phoneNumber}}
+    </li>
+    <li class="list-group-item">
+      <strong>Дата рождения: </strong>{{userDetails.birthDate}}
+    </li>
+    <li>
+    <br>
+    <form #form="ngForm" autocomplete="off" (submit)="changePassword(form)">
+      <div class="form-group">
+        <input name="userId" #userId="ngModel" [(ngModel)]="passModel.userId"
+               type="hidden" class="form-control" placeholder="id" required>
+        <input name="newPassword" #newPassword="ngModel" [(ngModel)]="passModel.newPassword"
+               class="form-control" placeholder="Новый пароль." required>
+      </div>
+      <div class="form-group">
+        <button type="submit" class="btn btn-info btn-block" [disabled]="form.invalid">
+          Изменить
+          пароль
+        </button>
+      </div>
+    </form>
+  </li>
+  </ul>
+</div>
