добавлен переход по категориям

--- a/BulletinBoard/ClientApp/src/app/nav-bar/nav-bar.component.html
+++ b/BulletinBoard/ClientApp/src/app/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <div class="topnav" id="tryfTopNav">
   <div class="mainNavPart">
-    <a routerLink=""><img src="/assets/icon24.png" width="24" height="24" /></a>
+    <a href=""><img src="/assets/icon24.png" width="24" height="24" /></a>
     <a routerLink="">Главная</a>
     <a routerLink="/users" *ngIf="isAdmin">Пользователи</a>
   </div>
