--- a/BulletinBoard/ClientApp/src/app/products/products.component.html
+++ b/BulletinBoard/ClientApp/src/app/products/products.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="products-conteiner">
-  <h2>Главная страница</h2>
+  <h2>{{pageTitle}}</h2>
   <div class="row" *ngFor="let columns of productsOnPage">
     <div class="column" *ngFor="let product of columns">
       <div class="card">
