подправил регистрацию (добавил возможность заранее ввести дополнительные данные), закинул в личный кабинет вывод своих объявлений, добавил удаление аккаунта и своих объявлений, подправил сущность picture теперь фото и есть поле для обозначения заглавного фото, пока работаю с загрузкой фото

--- a/BulletinBoard/ClientApp/src/app/users/register/register.component.css
+++ b/BulletinBoard/ClientApp/src/app/users/register/register.component.css
@@ -2,6 +2,19 @@
   box-sizing: border-box;
 }
 
+.notneсessory {
+  width: 100%;
+  margin: 0;
+  padding: 5px;
+  font-size: 1em;
+  border: solid 1px grey;
+}
+
+  .notneсessory legend {
+    padding: 0 1em;
+    cursor: pointer;
+  }
+
 .register-conteiner {
   margin: auto;
   max-width: 600px;
