--- a/BulletinBoard/ClientApp/src/app/products/createproduct/createproduct.component.css
+++ b/BulletinBoard/ClientApp/src/app/products/createproduct/createproduct.component.css
@@ -9,7 +9,7 @@
   background-color: #f2f2f2;
 }
 
-input[type=text] {
+input[type=text], input[type=number] {
   width: 100%;
   padding: 15px;
   margin: 5px 0 22px 0;
@@ -17,7 +17,7 @@ input[type=text] {
   background: white;
 }
 
-  input[type=text]:focus {
+  input[type=text], input[type=number]:focus {
     background-color: #ddd;
     outline: none;
   }
