--- a/BulletinBoard/ClientApp/src/app/products/createproduct/createproduct.component.html
+++ b/BulletinBoard/ClientApp/src/app/products/createproduct/createproduct.component.html
@@ -20,8 +20,8 @@
 
 
     <label for="productPrice"><b>Стоимость</b></label>
-    <input [(ngModel)]="productPrice" type="text" name="productPrice" id="productPrice"
-           placeholder="Введите стоимость товара" required [ngModelOptions]="{standalone: true}" />
+    <input [(ngModel)]="productPrice" type="number" step="0.01" min="0" name="productPrice" id="productPrice"
+           required [ngModelOptions]="{standalone: true}" />
 
     <label for="conditionIsNew"><b>Состояние товара</b></label>
     <p>
