Наконец вернулся в рабочее состояние и приступаю к загрузке изображений

--- a/BulletinBoard/ClientApp/src/app/products/createproduct/createproduct.component.html
+++ b/BulletinBoard/ClientApp/src/app/products/createproduct/createproduct.component.html
@@ -31,6 +31,9 @@
       </select>
     </p>
 
+    <img id="blah" src="" alt="your image" /><br />
+    <input type="file" name="AddImage" id="AddImage" accept="image/*" />
+
     <button type="submit" class="createbtn" (click)="create()">Разместить</button>
   </form>
 </div>
