подправил загрузку сразу для нескольких фото, перетащил функционал в PictureService

--- a/BulletinBoard/ClientApp/src/app/products/createproduct/createproduct.component.html
+++ b/BulletinBoard/ClientApp/src/app/products/createproduct/createproduct.component.html
@@ -30,18 +30,18 @@
         <option class="dropdown-opt" [value]="false">Б/У</option>
       </select>
     </p>
-
+    
     <div class="row" style="margin-bottom:15px;">
       <div class="col-md-3">
         <input type="file" #file placeholder="Выбрать" (change)="uploadFile(file.files)" style="display:none;" multiple>
-        <button type="button" class="btn btn-success" (click)="file.click()">Выбрать фото</button>
+        <button type="button" class="btn btn-success" *ngIf="productName != emptyString" (click)="file.click()">Выбрать фото</button>
       </div>
       <div class="col-md-4">
-        <span class="upload" *ngIf="progress > 0">
-          {{progress}}%
+        <span class="upload" *ngIf="pic.progress > 0">
+          {{pic.progress}}%
         </span>
-        <span class="upload" *ngIf="message">
-          {{message}}
+        <span class="upload" *ngIf="pic.message">
+          {{pic.message}}
         </span>
       </div>
     </div>
