загрузка картинок при создании объявления

--- a/BulletinBoard/ClientApp/src/app/products/products.component.html
+++ b/BulletinBoard/ClientApp/src/app/products/products.component.html
@@ -9,7 +9,7 @@
       <div class="card">
         <a routerLink="/products/product/{{product.id}}"><img src="../assets/icon24.png" alt="John" style="width:100%"></a>
         <a routerLink="/products/product/{{product.id}}">{{product.name}}</a>
-        <p class="title">{{product.description}}</p>
+        <p class="description">{{product.description}}</p>
         <p>{{product.price}}</p>
       </div>
     </div>
