--- a/BulletinBoard/ClientApp/src/styles.css
+++ b/BulletinBoard/ClientApp/src/styles.css
@@ -1,3 +1,20 @@
 #__next, *, body, html {
   font-family: Inter,Roboto,sans-serif;
 }
+
+.description {
+  width: 100%;
+  height: 80px;
+  overflow: hidden;
+  position: relative;
+}
+
+  .description:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    background: linear-gradient(180deg, transparent, #ffffff 50%);
+  }
