--- a/BulletinBoard/ClientApp/src/app/users/user/user.component.html
+++ b/BulletinBoard/ClientApp/src/app/users/user/user.component.html
@@ -47,7 +47,7 @@
     <div class="row" *ngFor="let columns of productsInGroups">
       <div class="column" *ngFor="let product of columns">
         <div class="card">
-          <a routerLink="/products/product/{{product.id}}"><img src="../assets/icon24.png" alt="{{product.name}}" style="width:100%"></a>
+          <a routerLink="/products/product/{{product.id}}"><img src="{{product.pictures[0].publicId}}" alt="{{product.name}}" style="width:100%"></a>
           <a routerLink="/products/product/{{product.id}}">{{product.name}}</a>
           <p class="description">{{product.description}}</p>
           <p>{{product.price}}</p>
