--- a/BulletinBoard/ClientApp/src/app/nav-bar/nav-bar.component.html
+++ b/BulletinBoard/ClientApp/src/app/nav-bar/nav-bar.component.html
@@ -1,14 +1,16 @@
 <div class="topnav" id="tryfTopNav">
-  <div class="mainNavPart">
-    <a href=""><img src="/assets/icon24.png" width="24" height="24" /></a>
+    <a href=""><img src="/assets/icon24.png" class="icon" /></a>
     <a routerLink="">Главная</a>
     <a routerLink="/users" *ngIf="isAdmin">Пользователи</a>
-  </div>
-  <div class="signPart">
-    <a routerLink="/" class="logout" *ngIf="visibility" (click)="logout()">Выход</a>
-    <a routerLink="/user-profile" class="userProfile" *ngIf="visibility">{{userName}}</a>
-    <a routerLink="/register" *ngIf="!visibility">Регистрация</a>
-    <a routerLink="/login" *ngIf="!visibility">Вход</a>
-    <a routerLink="/create-product" *ngIf="visibility">Разместить объявление</a>
-  </div>
+    <div class="search-container">
+      <input type="text" class="search" placeholder="Поиск.." name="search">
+      <button type="submit">Отправить</button>
+    </div>
+    <div class="header-right">
+      <a routerLink="/create-product" *ngIf="visibility">Разместить объявление</a>
+      <a routerLink="/register" *ngIf="!visibility">Регистрация</a>
+      <a routerLink="/login" *ngIf="!visibility">Вход</a>
+      <a routerLink="/user-profile" *ngIf="visibility">{{userName}}</a>
+      <a routerLink="/" *ngIf="visibility" (click)="logout()">Выход</a>
+    </div>
 </div>
