--- a/BulletinBoard/ClientApp/src/app/app.component.css
+++ b/BulletinBoard/ClientApp/src/app/app.component.css
@@ -1,14 +1,22 @@
 .headbar {
-  grid-area: headbar;
 }
 
 .mainContent {
-  grid-area: mainContent;
-  margin-top: 60px;
+  
 }
 
-.grid-container {
-  display: grid;
-  grid-template-areas: 'headbar headbar headbar headbar headbar'
-    'mainContent mainContent mainContent mainContent mainContent'
+@media (max-width: 767px) {
+  
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  
+}
+
+@media (min-width: 991px) and (max-width: 1199px) {
+ 
+}
+
+@media (min-width: 1200px) {
+ 
 }
