подправил вывод на страницу плиток объявлений, изменил вывод категорий при различных разрешениях

--- a/BulletinBoard/ClientApp/src/app/nav-bar/nav-bar.component.html
+++ b/BulletinBoard/ClientApp/src/app/nav-bar/nav-bar.component.html
@@ -4,7 +4,7 @@
     <a routerLink="/users" *ngIf="isAdmin">Пользователи</a>
     <div class="search-container">
       <input type="text" class="search" placeholder="Поиск.." name="search">
-      <button type="submit">Отправить</button>
+      <button type="submit">Поиск</button>
     </div>
     <div class="header-right">
       <a routerLink="/create-product" *ngIf="visibility">Разместить объявление</a>
