--- a/BulletinBoard/ClientApp/src/app/nav-bar/nav-bar.component.css
+++ b/BulletinBoard/ClientApp/src/app/nav-bar/nav-bar.component.css
@@ -47,16 +47,15 @@
 
   @media screen and (max-width: 970px) {
     .topnav {
-        height:auto;
+      height:auto;
     }
     .topnav .search-container {
-    float: none;
+      float: none;
     }
 
     .topnav a, .topnav .search, .topnav .search-container button {
       float: none;
       display: block;
-      text-align: left;
       width: 100%;
       margin: 0;
       padding: 14px;
@@ -69,4 +68,10 @@
         .topnav .search {
           border: 1px solid #ccc;
         }
+
+      .topnav .search-container button {
+        border: 1px solid #ccc;
+        border-bottom-left-radius: 15px;
+        border-bottom-right-radius: 15px;
+      }
   }
