--- a/BulletinBoard/ClientApp/src/app/products/products.component.css
+++ b/BulletinBoard/ClientApp/src/app/products/products.component.css
@@ -1,19 +1,22 @@
 .menu {
-    position: fixed;
+  position: fixed;
 }
 
 .products-conteiner {
     width: 99%;
     margin-left: 200px;
     padding-left: 5px;
-    position: fixed;
 }
 
-.column {
-  float: left;
-  width: 20%;
-  padding: 10px;
-}
+  .products-conteiner .page-title{
+      margin-left: 20px;
+  }
+
+  .column {
+    float: left;
+    width: 23%;
+    padding: 10px;
+  }
 
 .row:after {
   content: "";
@@ -59,3 +62,20 @@ a {
   a:hover {
     opacity: 0.7;
   }
+
+@media screen and (max-width: 970px) {
+  .menu {
+    position: absolute;
+    top: 260px;
+    width: 100%;
+    height: 60px;
+  }
+
+  .products-conteiner {
+    position: absolute;
+    top: 310px;
+    width: 100%;
+    margin-left: 0;
+    padding-left: 5px;
+  }
+}
