--- a/BulletinBoard/ClientApp/src/app/products/products.component.css
+++ b/BulletinBoard/ClientApp/src/app/products/products.component.css
@@ -1,9 +1,9 @@
 .menu {
-  position: fixed;
+    position:absolute;
 }
 
 .products-conteiner {
-    width: 99%;
+    width: 80%;
     margin-left: 200px;
     padding-left: 5px;
 }
@@ -14,7 +14,7 @@
 
   .column {
     float: left;
-    width: 23%;
+    width: 20%;
     padding: 10px;
   }
 
@@ -48,7 +48,6 @@
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 300px;
-  margin: auto;
   text-align: center;
   font-family: arial;
 }
@@ -76,6 +75,6 @@ a {
     top: 310px;
     width: 100%;
     margin-left: 0;
-    padding-left: 5px;
+    margin-right: 10px;
   }
 }
